# felix-netio

./: .gitignore  CMakeLists.txt
benchmark/: analysis.ipynb  asyncmsg_vs_libevent.py  netperf.py
cmt/: .gitignore  requirements
netio/: netio.hpp
src/: backends.cpp  main_netio_datagen.cpp  main_netio_server.cpp  message.cpp  serialization.cpp  serialization.hpp
src/libevent/: libevent.hpp  libevent_datasink.cpp  libevent_datasource.cpp  libevent_utility.cpp
src/posix/: posix.hpp  posix_datasink.cpp  posix_datasource.cpp
test/: test_backends.cpp  test_libevent_datasink.cpp  test_libevent_datasource.cpp  test_serialization.cpp  utility.hpp
tools/: cibuild  indent
